-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
When being executed with -Xcomp, TestLWorld fails with:
# Internal Error (/oracle/valhallaL/open/src/hotspot/share/opto/type.hpp:1696), pid=969, tid=980
# assert(_base >= AnyPtr && _base <= KlassPtr) failed: Not a pointer
C2: 59601 1122 b compiler.valhalla.valuetypes.TestLWorld::test12_verifier (24 bytes)
Stack: [0x00007f41201bd000,0x00007f41202be000], sp=0x00007f41202b7870, free space=1002k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1a3ffac] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x18c
V [libjvm.so+0x1a40f3f] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
V [libjvm.so+0xbde9aa] report_vm_error(char const*, int, char const*, char const*, ...)+0x12a
V [libjvm.so+0x19d7323] ValueTypeBaseNode::is_allocated(PhaseGVN*) const+0x163
V [libjvm.so+0x19dadb4] ValueTypeNode::Ideal(PhaseGVN*, bool)+0xe4
V [libjvm.so+0x16f5c39] PhaseIterGVN::transform_old(Node*)+0xb9
V [libjvm.so+0x16f1535] PhaseIterGVN::optimize()+0x65
V [libjvm.so+0xb32e8f] Compile::inline_incrementally(PhaseIterGVN&)+0x17f
V [libjvm.so+0xb360b1] Compile::Optimize()+0x3e1
V [libjvm.so+0xb38410] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x1320
V [libjvm.so+0x8fffe2] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x302
V [libjvm.so+0xb45eb0] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x3c0
V [libjvm.so+0xb46b99] CompileBroker::compiler_thread_loop()+0x269
V [libjvm.so+0x195ee47] JavaThread::thread_main_inner()+0x287
V [libjvm.so+0x195f0a1] JavaThread::run()+0x191
V [libjvm.so+0x1643bda] thread_native_entry(Thread*)+0xfa
# Internal Error (/oracle/valhallaL/open/src/hotspot/share/opto/type.hpp:1696), pid=969, tid=980
# assert(_base >= AnyPtr && _base <= KlassPtr) failed: Not a pointer
C2: 59601 1122 b compiler.valhalla.valuetypes.TestLWorld::test12_verifier (24 bytes)
Stack: [0x00007f41201bd000,0x00007f41202be000], sp=0x00007f41202b7870, free space=1002k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1a3ffac] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x18c
V [libjvm.so+0x1a40f3f] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
V [libjvm.so+0xbde9aa] report_vm_error(char const*, int, char const*, char const*, ...)+0x12a
V [libjvm.so+0x19d7323] ValueTypeBaseNode::is_allocated(PhaseGVN*) const+0x163
V [libjvm.so+0x19dadb4] ValueTypeNode::Ideal(PhaseGVN*, bool)+0xe4
V [libjvm.so+0x16f5c39] PhaseIterGVN::transform_old(Node*)+0xb9
V [libjvm.so+0x16f1535] PhaseIterGVN::optimize()+0x65
V [libjvm.so+0xb32e8f] Compile::inline_incrementally(PhaseIterGVN&)+0x17f
V [libjvm.so+0xb360b1] Compile::Optimize()+0x3e1
V [libjvm.so+0xb38410] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x1320
V [libjvm.so+0x8fffe2] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x302
V [libjvm.so+0xb45eb0] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x3c0
V [libjvm.so+0xb46b99] CompileBroker::compiler_thread_loop()+0x269
V [libjvm.so+0x195ee47] JavaThread::thread_main_inner()+0x287
V [libjvm.so+0x195f0a1] JavaThread::run()+0x191
V [libjvm.so+0x1643bda] thread_native_entry(Thread*)+0xfa