8207242: [lworld] TestLWorld fails with "assert(_base >= AnyPtr && _base <= KlassPtr) failed: Not a pointer"

Reviewed-by: roland